UPDATE : style: fix dark theme readibility for Windows Chrome Users
Updated highlight.css to fix unreadable syntax highlighting on the Jenkins dark theme, specifically addressing issues on Widows Chrome.

=> Improved Accessibility : Replaced low-cotrast dark colors with brighter ad readable colors. 

=> Standarized Colors : Aligned syntax colors for Java and Jelly/XML snippets with the official jenkins.io regular theme standards for consistency.

=> Linter Compliance : Converted all hex codes to 3-digit shorthand to satisfy the CSS linting requiremnets.

--- a/ui/src/css/highlight.css
+++ b/ui/src/css/highlight.css
@@ -1,14 +1,14 @@
 /*! Adapted from the GitHub style by Vasily Polovnyov <vast@whiteants.net> */
 .hljs-comment,
 .hljs-quote {
-  color: #f55;
+  color: #666769; 
   font-style: italic;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-  color: #4af;
+  color: white;
   font-weight: var(--monospace-font-weight-bold);
 }
 
@@ -17,18 +17,18 @@
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag .hljs-attr {
-  color: #008080;
+  color: #36eee0; 
 }
 
 .hljs-string,
 .hljs-doctag {
-  color: #d14;
+  color: #f88; 
 }
 
 .hljs-title,
 .hljs-section,
 .hljs-selector-id {
-  color: #900;
+  color: #f94;  
   font-weight: var(--monospace-font-weight-bold);
 }
 
@@ -38,14 +38,14 @@
 
 .hljs-type,
 .hljs-class .hljs-title {
-  color: #000080;
+  color: #0081cc;
   font-weight: var(--monospace-font-weight-bold);
 }
 
 .hljs-tag,
 .hljs-name,
 .hljs-attribute {
-  color: #000080;
+  color: #0081cc;
   font-weight: normal;
 }
 
